--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,26 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+}
+
+ul li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.nav {
+  background-color: #f4f7fb;
+}
+.nav__container {
+  display: flex;
+  justify-content: space-between;
+  alighn-items: center;
+  flex-direction: row;
+}
