--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,11 @@ ul li {
 
 a {
   text-decoration: none;
+  cursor: pointer;
+}
+
+body {
+  font-family: "Kanit", sans-serif;
 }
 
 .nav {
@@ -23,6 +28,24 @@ a {
 .nav__container {
   display: flex;
   justify-content: space-between;
-  alighn-items: center;
+  align-items: center;
   flex-direction: row;
+}
+.nav ul {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+.nav ul li {
+  padding: 1em;
+  cursor: pointer;
+}
+.nav ul li a {
+  color: #000;
+  padding: 1em;
+}
+.nav ul li a:hover {
+  background-color: #eea539;
+  color: #fff;
 }
