--- a/css/utilities/_base.scss
+++ b/css/utilities/_base.scss
@@ -1,3 +1,7 @@
+@use"./variables" as *;
+
+
+
 *{
     margin: 0;
     padding: 0;
@@ -12,4 +16,8 @@ ul li{
 }
 a{
     text-decoration: none;
+    cursor:pointer;
+}
+body{
+    font-family: $font;
 }
