--- a/css/utilities/_mixins.scss
+++ b/css/utilities/_mixins.scss
@@ -1,8 +1,9 @@
 @mixin flex($justify,$align,$direction:row){
     display:flex;
     justify-content: $justify;
-    alighn-items: $align;
+    align-items: $align;
     flex-direction: $direction;
 
 }
 
+ 
