--- a/css/style.scss
+++ b/css/style.scss
@@ -3,3 +3,7 @@
 @use "./utilities/base";
 @use "./sections/nav";
 @use "./sections/hero";
+@use"./sections/menu";
+@use "./sections/whyus";
+@use"./sections/footer";
+@use"./sections/helpline"
