--- a/css/style.css
+++ b/css/style.css
@@ -40,14 +40,43 @@ body {
 .nav ul li {
   padding: 1em;
   cursor: pointer;
+  position: relative;
 }
-.nav ul li a {
+.nav ul a {
   color: #000;
   padding: 1em;
 }
-.nav ul li a:hover {
+.nav ul a:hover {
   background-color: #eea539;
   color: #fff;
+}
+.nav__right ul li:first-child:hover span:last-child {
+  display: block;
+}
+.nav__right ul li:first-child span:last-child {
+  padding: 1em;
+  position: absolute;
+  right: -200%;
+  top: 100%;
+  width: 400px;
+  min-height: 200px;
+  background-color: #fff;
+  box-shadow: -1px 1px 4px darkgray;
+  display: none;
+}
+.nav__right__counter {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  display: flex;
+  height: 30px;
+  width: 30px;
+  background-color: #eea539;
+  border-radius: 50%;
+  position: absolute;
+  right: 0;
+  top: 0;
 }
 
 .hero__container {
@@ -60,8 +89,39 @@ body {
 .hero__container h1 {
   font-size: 5rem;
 }
+.hero button {
+  background-color: #eea539;
+  color: #fff;
+  border-radius: 5px;
+  padding: 1em 3em;
+  display: block;
+  margin: 0 auto;
+  border: none;
+  cursor: pointer;
+}
 .hero__left--orange {
   color: #eea539;
+  padding: 2em;
+}
+.hero__left__stats {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  padding: 6em;
+}
+.hero__left__stats--grey {
+  background-color: #f4f7fb;
+  padding: 2em;
+  margin: 2em 0;
+}
+.hero__left__stats--grey div {
+  background-color: #000;
+  padding: 2em;
+  border-radius: 50%;
+}
+.hero__left__stats--grey P {
+  font-weight: bold;
 }
 .hero__left__search {
   display: flex;
@@ -69,7 +129,7 @@ body {
   align-items: center;
   flex-direction: row;
   padding-left: 2em;
-  border-radius: 6px;
+  border-radius: 5px;
   border: 2px solid #f4f7fb;
 }
 .hero__left__search i {
@@ -87,7 +147,184 @@ body {
 .hero__left__search form button {
   padding: 2em 0;
   width: 18%;
+  background-color: #000;
+  color: #fff;
+  text-align: center;
 }
 .hero__left, .hero__right {
   flex: 1;
+}
+
+.menu h4 {
+  text-align: center;
+  color: #eea539;
+  font-size: 2rem;
+}
+.menu h2 {
+  text-align: center;
+  font-size: 4.5rem;
+  padding-bottom: 1em;
+  border: 2px 2px 2px 5px;
+}
+.menu h3 {
+  font-size: 1rem;
+}
+.menu__heading--orange {
+  color: #eea539;
+}
+.menu__categories ul {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+  font-weight: bold;
+  font-size: 2rem;
+  border-bottom: 2px solid gray;
+}
+.menu__categories ul li {
+  padding-bottom: 1em;
+}
+.menu__items {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: row;
+}
+.menu__items p {
+  text-align: center;
+}
+.menu__items h3 {
+  text-align: center;
+  font-size: 1.3rem;
+  padding: 1em;
+}
+.menu__items__back {
+  background-color: #f4f7fb;
+}
+.menu__items div {
+  background-color: #f4f7fb;
+}
+.menu__items div img {
+  margin: -1px;
+}
+.menu__price {
+  background-color: #000;
+  color: #fff;
+  border-radius: 2px;
+  padding: 1em 3em;
+  display: block;
+  margin: 0 auto;
+  border: none;
+  cursor: pointer;
+}
+.menu__price--orange {
+  background-color: #eea539;
+  color: #fff;
+  border-radius: 2px;
+  padding: 1em 3em;
+  display: block;
+  margin: 0 auto;
+  border: none;
+  cursor: pointer;
+}
+
+.active {
+  color: #eea539;
+  border-bottom: 5px solid #eea539;
+}
+
+.whyus__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+.whyus__container h4 {
+  font-size: 2rem;
+  padding-bottom: 1em;
+  color: #eea539;
+}
+.whyus__container h2 {
+  font-size: 4rem;
+}
+.whyus__container h3 {
+  font-size: 2rem;
+}
+.whyus__items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 2em;
+}
+.whyus .img {
+  background-color: #000;
+  border-radius: 50%;
+  text-align: center;
+}
+.whyus .div {
+  background-color: #f4f7fb;
+}
+
+.footer__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  margin: 0 1em;
+  background-color: black;
+  padding: 2em;
+  gap: 50;
+}
+.footer__container h3 {
+  color: #fff;
+}
+.footer__container ul {
+  color: #fff;
+}
+.footer__container p {
+  color: #fff;
+}
+.footer__container button {
+  background-color: #eea539;
+  color: #fff;
+  border-radius: 5px;
+  padding: 1em 3em;
+  display: block;
+  margin: 0 auto;
+  border: none;
+  cursor: pointer;
+}
+.footer__items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  gap: 2em;
+}
+.footer .form {
+  background-color: #000;
+  color: #fff;
+  border-radius: 2px;
+  padding: 1em 3em;
+  display: block;
+  margin: 0 auto;
+  border: none;
+  cursor: pointer;
+}
+
+.helpline__container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+.helpline__container__items {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+}
+.helpline__container__items_--orange {
+  color: #eea539;
 }
